--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Install dependencies
       env:
-        BENCHOPT_BRANCH: bmalezieux:fix_test_objective
+        BENCHOPT_BRANCH: benchopt:master
       run: |
         eval "$(conda shell.bash hook)"
         conda activate base
