CLN rename benchopt_branch is_master check

--- a/.github/workflows/benchopt_branch.yml
+++ b/.github/workflows/benchopt_branch.yml
@@ -1,11 +1,11 @@
-name: check_benchopt_branch
+name: benchopt_branch
 on:
   pull_request:
     branches:
       - main
 
 jobs:
-  check_benchopt_branch:
+  is_master:
     runs-on: ubuntu-latest
 
     steps:
