--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,13 +24,18 @@ jobs:
 
     - name: Install dependencies
       env:
-        BENCH_BRANCH: master
+        BENCHOPT_BRANCH: benchopt:master
       run: |
         eval "$(conda shell.bash hook)"
         conda activate base
-        # make sure we have the latest version of pip to correctly install benchopt in sub conda env
+        # make sure we have the latest version of pip
+        # to correctly install benchopt in sub conda env
         pip install --upgrade pip
-        pip install -U git+https://github.com/benchopt/benchopt@$BENCH_BRANCH
+
+        # Get the correct branch from benchopt
+        USER=${BENCHOPT_BRANCH%:*}
+        BRANCH=${BENCHOPT_BRANCH##*:}
+        pip install -U git+https://github.com/$USER/benchopt@$BRANCH
 
     - name: Test
       env:
